2007-11-09  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-ecj.patch
	(langtools/make/build.xml): Add source="1.5".
	(langtools/make/build.properties): Remove -Werror.
	(jaxp/make/build.xml): Add source="1.5".

2007-11-09  Gary Benson  <gbenson@redhat.com>

	* Makefile.am (stamps/extract.stamp, stamps/extract-ecj.stamp):
	Fix permissions after unzipping.
	* Makefile.in: Regenerated.

2007-11-08  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Added check when copying over rt.jar to bootstrap/ecj
	* Makefile.in: Regenerated.

2007-11-08  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-bytecodeInterpreter.patch: New file.
	* patches/icedtea-signature-iterator.patch: Likewise.
	* patches/icedtea-signed-types.patch: Likewise.
	* patches/icedtea-test-atomic-operations.patch: Likewise.
	* patches/icedtea-core-build.patch: Likewise.
	* patches/icedtea-linker-options.patch: Likewise.
	* patches/icedtea-ports.patch: Likewise.
	* Makefile.am (ICEDTEA_PATCHES): Added the above.
	* Makefile.in: Regenerated.

2007-11-07  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Removed docs patch.
	* Makefile.in: Regenerate.
	* patches/icedtea-docs.patch: Removed. Causing out of memory errors
	because jaxws is not built.

2007-11-07  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Added new patch to list.
	* Makefile.in: Regenerate.
	* patches/icedtea-docs.patch: New patch to build docs.
	* .hgignore: Updated.

2007-11-07  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Re-added ecj targets, added new patches to the list and
	updated tools.jar.
	* Makefile.in: Regenerated.
	* aclocal.m4: Likewise.
	* configure: Likewise.
	* configure.ac: Re-added --with-icedtea and --with-icedtea-home
	options. Also, added --with-gcj-home to specify where gcj is
	installed- the default is /usr/lib/jvm/java-gcj/.
	* generated/*.java: Regenerated and added several new sources.
	* generated/fontconfig/*.bfc: Added generated font files.